# philosophers

./: CMakeLists.txt  Makefile  dinner.c  error.c  philo_init.c  philo_one.c  philo_one.h  thread.c  write_msg.c
philo_one/: Makefile  dinner.c  error.c  philo_init.c  philo_one  philo_one.c  philo_one.h  thread.c  write_msg.c
philo_three/: Makefile  dinner.c  error.c  fork_phil.c  philo_init.c  philo_three.c  philo_three.h  thread.c  write_msg.c
philo_three/utils/: utils.c
philo_two/: Makefile  dinner.c  philo_init.c  philo_two.c  philo_two.h  thread.c  time.c  write_msg.c
philo_two/utils/: utils.c
utils/: utils.c
